fixed spacing on between two lines - mobile

--- a/web/app/themes/Foody/resources/sass/pages/recipe/_recipe.scss
+++ b/web/app/themes/Foody/resources/sass/pages/recipe/_recipe.scss
@@ -2044,10 +2044,10 @@ $content-width: 95%;
       .recipe_similar_content{
         .similar-content-items{
           padding: 0;
-          margin: 0;
+          margin: 14px 0;
 
           .similar-content-item-listing{
-            margin: 0 5px;
+            margin: 0;
 
             .similar-content-listing-title{
               font-size: 13px !important;
